# wei-server-mcp

./: Cargo.toml  README.md  prd.txt
src/: main.rs  tools.rs
