[package]
name = "rig-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
mcp-core = { version = "0.1.42", features = ["sse"] }
mcp-core-macros = "0.1.11"
#rig-alias = { version = "0.1.0", package = "rig" }
rig-core = { version = "0.11.0", features = ["mcp"] }
schemars = "0.8.22"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
